float_eq/tests/derive_tests/float_eq/float_eq_generic.stderr
error: This trait does not yet support derive for generic types.
 --> $DIR/float_eq_generic.rs:3:41
  |
3 | #[derive(Debug, Clone, Copy, PartialEq, FloatEqUlpsTol, FloatEq)]
  |                                         ^^^^^^^^^^^^^^
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: This trait does not yet support derive for generic types.
 --> $DIR/float_eq_generic.rs:3:57
  |
3 | #[derive(Debug, Clone, Copy, PartialEq, FloatEqUlpsTol, FloatEq)]
  |                                                         ^^^^^^^
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
