float_eq/tests/derive_tests/float_eq/float_eq_generic.rs
use float_eq::{FloatEq, FloatEqUlpsTol};

#[derive(Debug, Clone, Copy, PartialEq, FloatEqUlpsTol, FloatEq)]
struct MyComplexUlps<T> {
    re: T,
    im: T,
}

fn main() {}
